<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@android:style/Theme.Light.NoTitleBar">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="256dp"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/textViewRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/buttonRegister"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegistrarPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextRegistrarPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistrarPassword" />

    <EditText
        android:id="@+id/editTextRegistrarUsuario"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/usuarioMain"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

    <EditText
        android:id="@+id/editTextRegistrarPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/passwordMain"
        android:inputType="numberPassword"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegistrarUsuario"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegistrarUsuario"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistrarUsuario" />
</android.support.constraint.ConstraintLayout>
